some header css put in

--- a/index.html
+++ b/index.html
@@ -14,19 +14,15 @@
 
 <header>
   <div class="container">
-    <img src="./resources/images/img-myt-logo.jpg" alt="">
+    <img id="logo" src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
     <span>My Times</span>
       <nav>
         <ul>
-          <li>World</li>
-          <li>U.S.</li>
-          <li>Tech</li>
-          <li>Science</li>
-
-
-
+          <li><a href="#">World</a></li>
+          <li><a href="#">U.S.</a></li>
+          <li><a href="#">Tech</a></li>
+          <li><a href="#">Science</a></li>
         </ul>
-
       </nav>
   </div>
 
