--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <link rel="shortcut icon" href="./resources/images/bfavicon.gif" type="image/x-icon">
     <title>My Times</title>
   </head>
+
   <body>
+
+
+      <div class="container">
+        <div id="logo">
+          <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
+          <span>My Times</span>
+        </div>
+
+
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+
+
 
   </body>
 </html>
-
-<header>
-  <div class="container">
-    <img id="logo" src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
-    <span>My Times</span>
-      <nav>
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
-      </nav>
-  </div>
-
-</header>
