header mostly sorted

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
   <body>
 
-
-      <div class="container">
+<!--HEADER SECTION------------------------------------------>
+      <header>
         <div id="logo">
           <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
           <span>My Times</span>
         </div>
-
 
         <nav>
           <span><a href="#">World</a></span>
@@ -24,9 +23,8 @@
           <span><a href="#">Tech</a></span>
           <span><a href="#">Science</a></span>
         </nav>
-      </div>
 
-
+      </header>
 
   </body>
 </html>
