--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </header>
 <!-- MAIN SECTION------------------------------------------------->
     <div id="main-container">
+<!-- COLUMN LARGE-->
       <div class="column-large">
         <div id="mother">
           <div class="headline">
@@ -76,18 +77,68 @@
           </div><!-- close camera-->
 
     </div><!-- close column.large-->
-  </div><!--close main.container-->
 
 
-      <div class="column.medium">
+<!-- COLUMN MEDIUM-->
+<div class="column-medium">
+  <div id="fbi">
+    <div class="headline">
+      <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+
+    </div>
+    <div class="story">
+      <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
+        Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor.
+        Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum.
+        Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+    </div>
+  </div><!--close fbi-->
+
+    <div id="cat">
+      <div class="headline">
+        <h2>Cats in Control- Is It a Thing?</h2>
+        <img src="" alt="">
+    </div>
+  </div><!--close cat-->
+
+  <div id="brooklyn">
+    <div class="headline">
+      <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
+        Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis
+        commodo tellus pellentesque in.</p>
+    </div>
+  </div><!-- close earth-->
+
+    <div id="burger">
+      <div class="headline">
+        <h2>Burger for Breakfast: How Early is too Early?</h2>Burger for Breakfast: How Early is too Early?
+    </div>
+    <div class="story">
+      <p>Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+    </div>
+  </div><!--close burger-->
+
+    <div id="camera">
+      <div class="headline">
+        <h2>Research Shows Cameras Erase Memory</h2>
+        <img src="" alt="">
+      </div>
+    </div><!-- close camera-->
+
+</div><!-- close column-medium-->
+
+<!-- COLUMN SMALL-->
+      <div class="column-small">
         <div class="headline">
         </div>
       </div>
 
-      <div class="column.small">
-        <div class="headline">
-        </div>
-      </div>
+</div><!--close main.container-->
+
+
+
+
+
 
   </body>
 </html>
