--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 <!-- MAIN SECTION------------------------------------------------->
     <div id="main-container">
 <!-- COLUMN LARGE-->
-      <div class="column-large">
+      <div class="column" id="large">
         <div id="mother">
-          <div class="headline">
+          
+            <div class="headline">
             <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
-            <img src="" alt="">
+
           </div>
+
           <div class="story">
             <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
                Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
@@ -80,7 +82,7 @@
 
 
 <!-- COLUMN MEDIUM-->
-<div class="column-medium">
+<div class="column" id="medium">
   <div id="fbi">
     <div class="headline">
       <h2>FBI Finds Action Star Guilty of False Advertising</h2>
@@ -109,28 +111,21 @@
     </div>
   </div><!-- close earth-->
 
-    <div id="burger">
-      <div class="headline">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>Burger for Breakfast: How Early is too Early?
-    </div>
-    <div class="story">
-      <p>Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-    </div>
-  </div><!--close burger-->
-
-    <div id="camera">
-      <div class="headline">
-        <h2>Research Shows Cameras Erase Memory</h2>
-        <img src="" alt="">
-      </div>
-    </div><!-- close camera-->
 
 </div><!-- close column-medium-->
 
 <!-- COLUMN SMALL-->
-      <div class="column-small">
-        <div class="headline">
+      <div class="column" id="small">
+        <div id="cookie"
+        <img src="" alt="">
         </div>
+        <div id="bites">
+        <div class="headline">NEWS BITES
+        </div>
+        <div class="story">
+          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+        </div>
+      </div>
       </div>
 
 </div><!--close main.container-->
