images in, white headlines done

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <!-- COLUMN LARGE-->
       <div class="column" id="large">
         <div id="mother">
-          
-            <div class="headline">
+
+          <div class="headline" id="main">
             <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
 
           </div>
@@ -58,7 +58,7 @@
         <div id="earth">
           <div class="headline">
             <h2>Earth Spins Backwards for 2017</h2>
-            <img src="" alt="">
+
           </div>
         </div><!-- close earth-->
 
@@ -74,7 +74,7 @@
           <div id="camera">
             <div class="headline">
               <h2>Research Shows Cameras Erase Memory</h2>
-              <img src="" alt="">
+
             </div>
           </div><!-- close camera-->
 
@@ -99,7 +99,7 @@
     <div id="cat">
       <div class="headline">
         <h2>Cats in Control- Is It a Thing?</h2>
-        <img src="" alt="">
+
     </div>
   </div><!--close cat-->
 
@@ -116,8 +116,9 @@
 
 <!-- COLUMN SMALL-->
       <div class="column" id="small">
-        <div id="cookie"
-        <img src="" alt="">
+        <div id="cookie">
+          <img src="./resources/images/img-news-bite.png">
+
         </div>
         <div id="bites">
         <div class="headline">NEWS BITES
