--- a/index.html
+++ b/index.html
@@ -118,17 +118,22 @@
       <div class="column" id="small">
         <div id="cookie">
           <img src="./resources/images/img-news-bite.png">
-
         </div>
-        <div id="bites">
+
+      <div class="newsbites">
         <div class="headline">NEWS BITES
         </div>
-        <div class="story">
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+          <div class="story">
+            <span class="bite">Cat Emoji Goes Viral</span>
+            <span class="bite"> Buy Youtube Views</span>
+            <span class="bite">Home Business Advertising Ideas</span>
+            <span class="bite">Advertising Internet Online</span>
+            <span class="bite">Illustration in Marketing Materials</span>
+            <span class="bite">Finally a Top Secret Way You Can</span>
         </div>
-      </div>
-      </div>
-      
+      </div><!--CLOSE BITES-->
+    </div><!--CLOSE SMALL COLUMN-->
+
 
 </div><!--close main.container-->
 
