basic footer in. Unresolved issues with columns, photos, scroll

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <link href="./resources/style.css" type="text/css" rel="stylesheet">
 <!-- FAVICON added below-->
-    <link rel="shortcut icon" href="./resources/images/bfavicon.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="./resources/images/img-myt-logo.jpg" type="image/x-icon">
     <title>My Times</title>
   </head>
 
   <body>
+
+
+
+
 
 <!--HEADER SECTION------------------------------------------>
       <header>
@@ -105,11 +109,13 @@
 
   <div id="brooklyn">
     <div class="headline">
+    <div class="story">
       <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
         Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis
         commodo tellus pellentesque in.</p>
     </div>
-  </div><!-- close earth-->
+    </div>
+  </div><!-- close brooklyn-->
 
 
 </div><!-- close column-medium-->
@@ -133,14 +139,27 @@
         </div>
       </div><!--CLOSE BITES-->
     </div><!--CLOSE SMALL COLUMN-->
+    </div><!--close main.container-->
+    <footer>
+      <div class="footname">
+        <p>MY Times</p>
+      </div>
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+      <p>© 2016, My Times (A Division of Codecademy bite)
+
+    </footer>
 
 
-</div><!--close main.container-->
 
 
 
 
 
 
+
+  </body></p>
   </body>
 </html>
