improved but incomplete footer. issues unresolved

--- a/index.html
+++ b/index.html
@@ -140,26 +140,28 @@
       </div><!--CLOSE BITES-->
     </div><!--CLOSE SMALL COLUMN-->
     </div><!--close main.container-->
+
+    <!-- Footer is outside of main container- is this right?-->
     <footer>
-      <div class="footname">
-        <p>MY Times</p>
+      <div class="main-footer"
+        <div id="title">
+        <span>MY Times</span>
+        </div>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div><!--close main-footer-->
+      <div class="copyright">
+        <p>© 2016, My Times (A Division of Codecademy bite)
+        </p>
       </div>
-      <span><a href="#">World</a></span>
-      <span><a href="#">U.S.</a></span>
-      <span><a href="#">Tech</a></span>
-      <span><a href="#">Science</a></span>
-      <p>© 2016, My Times (A Division of Codecademy bite)
 
     </footer>
 
 
 
-
-
-
-
-
-
-  </body></p>
   </body>
 </html>
