a mess, las commit before major restructuring!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="main-container">
 <!-- COLUMN LARGE-->
       <div class="column" id="large">
-        <div id="mother">
+        <div class="article" id="mother">
 
           <div class="headline" id="main">
             <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
@@ -50,7 +50,7 @@
           </div>
         </div><!--close mother-->
 
-          <div id="orca">
+          <div class="article" id="orca">
             <div class="headline">
               <h2>Orca Spends Vacation at Land World Puget</h2>
           </div>
@@ -59,14 +59,14 @@
           </div>
         </div><!--close orca-->
 
-        <div id="earth">
+        <div class="image" id="earth">
           <div class="headline">
             <h2>Earth Spins Backwards for 2017</h2>
 
           </div>
         </div><!-- close earth-->
 
-          <div id="burger">
+          <div class="article" id="burger">
             <div class="headline">
               <h2>Burger for Breakfast: How Early is too Early?</h2>Burger for Breakfast: How Early is too Early?
           </div>
@@ -75,7 +75,7 @@
           </div>
         </div><!--close burger-->
 
-          <div id="camera">
+          <div class="image" id="camera">
             <div class="headline">
               <h2>Research Shows Cameras Erase Memory</h2>
 
@@ -87,7 +87,7 @@
 
 <!-- COLUMN MEDIUM-->
 <div class="column" id="medium">
-  <div id="fbi">
+  <div class="article" id="fbi">
     <div class="headline">
       <h2>FBI Finds Action Star Guilty of False Advertising</h2>
 
@@ -100,14 +100,14 @@
     </div>
   </div><!--close fbi-->
 
-    <div id="cat">
+    <div class="image" id="cat">
       <div class="headline">
         <h2>Cats in Control- Is It a Thing?</h2>
 
     </div>
   </div><!--close cat-->
 
-  <div id="brooklyn">
+  <div class="article" id="brooklyn">
     <div class="headline">
     <div class="story">
       <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
@@ -122,7 +122,7 @@
 
 <!-- COLUMN SMALL-->
       <div class="column" id="small">
-        <div id="cookie">
+        <div class="article" id="cookie">
           <img src="./resources/images/img-news-bite.png">
         </div>
 
@@ -144,9 +144,9 @@
     <!-- Footer is outside of main container- is this right?-->
     <footer>
       <div class="main-footer"
-        <div id="title">
-        <span>MY Times</span>
-        </div>
+
+        <span id="title">MY Times
+        </span>
         <nav>
           <span><a href="#">World</a></span>
           <span><a href="#">U.S.</a></span>
