new files (2) for complete restructuring & restyling

--- a/index.html
+++ b/index.html
@@ -30,34 +30,35 @@
 
       </header>
 <!-- MAIN SECTION------------------------------------------------->
-    <div id="main-container">
+    <div class="main-container">
 <!-- COLUMN LARGE-->
-      <div class="column" id="large">
-        <div class="article" id="mother">
+      <div class="large">
 
-          <div class="headline" id="main">
+        <div class="article">
+          <div id="mother">
+            <div class="headline">
             <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
-
-          </div>
-
-          <div class="story">
-            <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+            </div>
+            <div class="story">
+              <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
                Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
                pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris.
                Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor,
                sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit.
                Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-          </div>
-        </div><!--close mother-->
+             </div><!-- close story-->
+           </div><!--close mother-->
+         </div><!--close article-->
 
-          <div class="article" id="orca">
+        <div class="article">
+          <div id="orca">
             <div class="headline">
               <h2>Orca Spends Vacation at Land World Puget</h2>
-          </div>
-          <div class="story">
+            </div>
+            <div class="story">
             <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-          </div>
-        </div><!--close orca-->
+          </div><!--close story-->
+        </div><!-- close orca-->
 
         <div class="image" id="earth">
           <div class="headline">
@@ -82,7 +83,7 @@
             </div>
           </div><!-- close camera-->
 
-    </div><!-- close column.large-->
+    </div><!-- close large-->
 
 
 <!-- COLUMN MEDIUM-->
