major breakthrough in column display!

--- a/index2.html
+++ b/index2.html
@@ -29,9 +29,8 @@
     <div class="main-container">
 <!-- COLUMN LARGE-->
       <div class="large">
-
-        <div class="article">
-          <div class="mother">
+<!-- *****the MAJOR BREAKTHRU was simply setting everything up in its own div- story in block of 2 vertical stories in block of 4 stories in cloumn etc-->
+          <div class="mainstory">
             <div class="headline">
             <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
             </div>
@@ -43,47 +42,53 @@
                sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit.
                Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
              </div><!-- close story-->
-           </div><!--close mother-->
-         </div><!--close article-->
+           </div><!--close mainstory-->
 
-         <div class="article">
-           <div class="orca">
-             <div class="headline">
-              <h2>Orca Spends Vacation at Land World Puget</h2>
-              </div>
-              <div class="story">
-                <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-              </div><!--close story-->
-            </div><!-- close orca-->
-          </div> <!-- close article-->
 
-        <div class="image">
-          <div class="earth">
-            <div class="headline">
-              <h2>Earth Spins Backwards for 2017</h2>
-            </div>
-          </div><!-- close earth-->
-        </div><!-- close image-->
+           <div class="four-stories">
+             <div class="two-stories">
+               <div class="article">
+                 <div class="orca">
+                   <div class="headline">
+                     <h2>Orca Spends Vacation at Land World Puget</h2>
+                   </div>
+                   <div class="story">
+                     <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+                   </div><!--close story-->
+                 </div><!-- close orca-->
+               </div> <!-- close article-->
 
-          <div class="article">
-            <div class="burger">
-              <div class="headline">
-                <h2>Burger for Breakfast: How Early is too Early?</h2>
-              </div>
-              <div class="story">
+
+               <div class="imagestory">
+                 <div class="earth">
+                   <div class="headline">
+                     <h2>Earth Spins Backwards for 2017</h2>
+                   </div>
+                 </div><!-- close earth-->
+               </div><!-- close imagestory-->
+            </div><!-- close 2 stories (vertical)-->
+
+            <div class="2stories">
+              <div class="article">
+                <div class="burger">
+                  <div class="headline">
+                    <h2>Burger for Breakfast: How Early is too Early?</h2>
+                  </div>
+                  <div class="story">
                 <p>Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
               </div><!-- close story-->
             </div><!--close burger-->
           </div><!-- close article-->
 
-          <div class="image">
-            <div class="camera">
-              <div class="headline">
-                <h2>Research Shows Cameras Erase Memory</h2>
-              </div>
-            </div><!-- close camera-->
-          </div> <!--close image-->
-
-      </div><!-- close large-->
+            <div class="imagestory">
+              <div class="camera">
+                <div class="headline">
+                  <h2>Research Shows Cameras Erase Memory</h2>
+                </div>
+              </div><!-- close camera-->
+            </div> <!--close imagestory-->
+          </div><!-- close 2 stories (vertical)-->
+        </div> <!-- close "4stories"-->
+      </div><!-- close large (column)-->
 
 <!-- Below not restructured yet
