--- a/index2.html
+++ b/index2.html
@@ -91,4 +91,59 @@
         </div> <!-- close "4stories"-->
       </div><!-- close large (column)-->
 
-<!-- Below not restructured yet
+<!-- COLUMN MEDIUM: vertically: article(fbi)- imagestory(cat)-story(brooklyn)-->
+
+      <div class="medium">
+        <div class="article">
+          <div class="fbi">
+            <div class="headline">
+              <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            </div><!--close headline-->
+            <div class="story">
+                <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros
+                  tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor.
+                  Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum.
+                  Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+                </p>
+            </div><!-- close story-->
+          </div><!-- close fbi-->
+        </div><!-- close article-->
+
+        <div class="imagestory">
+          <div class="cat">
+            <div class="headline">
+              <h2>Cats in Control-Is It a Thing?</h2>
+            </div><!--close headline-->
+          </div><!--close cat-->
+        </div><!--close imagestory-->
+
+        <div class="story">
+          <div class="brooklyn">
+            <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem,
+              vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a
+              vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+            </p>
+          </div>
+        </div>
+      </div> <!-- close medium (column)-->
+
+      <!--COLUMN SMALL: cookie pic,newsbites-->
+
+      <div class="small">
+        <div class="newsbites">
+          <img src="./resources/images/img-news-bite.png">
+          <h3>NEWS BITES</h3>
+          <div class="bites">
+            <span class="bite">Cat Emoji Goes Viral</span>
+            <span class="bite"> Buy Youtube Views</span>
+            <span class="bite">Home Business Advertising Ideas</span>
+            <span class="bite">Advertising Internet Online</span>
+            <span class="bite">Illustration in Marketing Materials</span>
+            <span class="bite">Finally a Top Secret Way You Can</span>
+        </div>
+        </div><!--CLOSE BITES-->
+      </div><!--close SMALL-->
+
+
+<!--END OF MAIN SECTION-->
+    </div><!--close main-container-->
