improved css styling and html structure

--- a/index2.html
+++ b/index2.html
@@ -31,9 +31,11 @@
       <div class="large">
 <!-- *****the MAJOR BREAKTHRU was simply setting everything up in its own div- story in block of 2 vertical stories in block of 4 stories in cloumn etc-->
           <div class="mainstory">
-            <div class="headline">
-            <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+            <div class="mainimage">
+              <h2 class="main-headline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
             </div>
+
+
             <div class="story">
               <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
                Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
@@ -133,15 +135,15 @@
         <div class="newsbites">
           <img src="./resources/images/img-news-bite.png">
           <h3>NEWS BITES</h3>
-          <div class="bites">
+          <div class="biteslist">
             <span class="bite">Cat Emoji Goes Viral</span>
             <span class="bite"> Buy Youtube Views</span>
             <span class="bite">Home Business Advertising Ideas</span>
             <span class="bite">Advertising Internet Online</span>
             <span class="bite">Illustration in Marketing Materials</span>
             <span class="bite">Finally a Top Secret Way You Can</span>
-        </div>
-        </div><!--CLOSE BITES-->
+          </div><!--close biteslist-->
+        </div><!--CLOSE nesbites-->
       </div><!--close SMALL-->
 
 
