newsbites sorted, footer in- needs fixing.

--- a/index2.html
+++ b/index2.html
@@ -145,6 +145,27 @@
         </div><!--CLOSE nesbites-->
       </div><!--close SMALL-->
 
-
-<!--END OF MAIN SECTION-->
     </div><!--close main-container-->
+    <!--END OF MAIN SECTION-->
+
+    <!-- FOOTER -------------->
+
+    <footer>
+      <div class="info">
+        <span class="title">MY Times
+        </span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div><!--close info-->
+      <div class="copyright">
+        <p>© 2016, My Times (A Division of Codecademy bite)
+        </p>
+      </div><!--close copyright-->
+
+    </footer>
+  </body>
+</html>
