footer better. whole needs margins, padding, & font checking

--- a/index2.html
+++ b/index2.html
@@ -162,7 +162,7 @@
         </nav>
       </div><!--close info-->
       <div class="copyright">
-        <p>© 2016, My Times (A Division of Codecademy bite)
+        <p>© 2016, My Times (A Division of DRG79!)
         </p>
       </div><!--close copyright-->
 
